--- a/lab2-about.html
+++ b/lab2-about.html
@@ -6,9 +6,11 @@
     <body>
         <h1>About Lab 2</h1>
         <p>The purpose of this lab is to demonstrate knowledge about creating relative links and mailto links.</p>
-        <tr>
-            <td><a href="lab2-home.html">Lab 2 home page</a></td>
-            <td><a href="mailto:S01293008@acad.tri-c.edu">Send email to me</a></td>
-        </tr>
+        <table>
+            <tr>
+                <td><a href="lab2-home.html">Lab 2 home page</a></td>
+                <td><a href="mailto:S01293008@acad.tri-c.edu">Send email to me</a></td>
+            </tr>
+        </table>
     </body>
 </html>
