--- a/lab2-home.html
+++ b/lab2-home.html
@@ -6,11 +6,13 @@
     <body>
         <h1>Welcome</h1>
         <p>The purpose of this lab is to demonstrate knowledge about creating links and tables.</p>
-        <tr>
-            <td><a href="lab2-about.html">Lab 2 about page</a></td>
-            <td><a href="https://www.mozilla.org/en-US/firefox/new/?gad_source=1&gclid=EAIaIQobChMIyZ_qyrqOiwMV19XCBB2YmB5MEAAYASAAEgLyHfD_BwE">Mozilla homepage</a></td>
-            <td><a href="https://www.tri-c.edu/">tri-c homepage</a></td>
-            <td><a href="https://www.tri-c.edu/programs/information-technology/index.html">tri-c it homepage</a></td>
-        </tr>
+        <table>
+            <tr>
+                <td><a href="lab2-about.html">Lab 2 about page</a></td>
+                <td><a href="https://www.mozilla.org/en-US/firefox/new/?gad_source=1&gclid=EAIaIQobChMIyZ_qyrqOiwMV19XCBB2YmB5MEAAYASAAEgLyHfD_BwE">Mozilla homepage</a></td>
+                <td><a href="https://www.tri-c.edu/">tri-c homepage</a></td>
+                <td><a href="https://www.tri-c.edu/programs/information-technology/index.html">tri-c it homepage</a></td>
+            </tr>
+        </table>
     </body>
 </html>
