--- a/in-class3.html
+++ b/in-class3.html
@@ -5,6 +5,20 @@
     </head>
     <body>
         <a href="test.html">Test</a>
-
+        <a href="/">Root></a>
+        <table>
+            <tr>
+                <th>Language</th>
+                <th>Use</th>
+            </tr>
+            <tr>
+                <td>HTML</td>
+                <td>Webpage layout</td>
+            </tr>
+            <tr>
+                <td>CSS</td>
+                <td>Webpage design</td>
+            </tr>
+        </table>
     </body>
 </html>
