--- a/lab5-text.html
+++ b/lab5-text.html
@@ -14,7 +14,6 @@
     ol{list-style-type:upper-roman;list-style-position:inside;}
     li{margin-bottom:1rem;}
   </style>
-
 </head>
 <body>
   <header>
@@ -31,7 +30,16 @@
     </section>
     <section>
       <h2>Transforming Text</h2>
-      <p><span style="text-transform:capitalize;">This</span> <span style="text-transform:capitalize;">paragraph</span> <span style="text-transform:capitalize;">demonstrates</span> <span style="text-transform:capitalize;">text</span> <span style="text-transform:capitalize;">transformation</span> <span style="text-transform:capitalize;">with</span> <span style="text-transform:capitalize;">uppercase</span>, <span style="text-transform:capitalize;">lowercase</span>, <span style="text-transform:capitalize;">and</span> <span style="text-transform:capitalize;">capitalization</span>.</p>
+      <p id="title">This paragraph demonstrates text transformation with uppercase, lowercase, and capitalization.</p>
+      <script>
+        function toTitleCase(str) {
+            return str.replace(/\w\S*/g, function(txt) {
+                return txt.charAt(0).toUpperCase() + txt.substr(1).toLowerCase();
+            });
+        }
+  
+        document.getElementById('title').innerText = toTitleCase(document.getElementById('title').innerText);
+    </script>
     </section>
     <section>
       <h2>Text Shadow</h2>
